Fix header spacing issues

--- a/scss/secondary-header.scss
+++ b/scss/secondary-header.scss
@@ -154,14 +154,14 @@
     min-height: 40px;
 
     &.cluster-tabs {
-      top: 65px;
+      top: unset;
       background-color: $color__white;
       height: 40px;
       width: auto;
 
       &--long {
         @extend .cluster-tabs;
-        top: 90px;
+        top: unset;
       }
     }
   }
@@ -176,7 +176,6 @@
 .secondary-header-wrapper {
   position: relative;
   width: 100%;
-  height: $secondary-header-max-height;
   z-index: 1000;
 }
 
